adding edited game to Lrepo

--- a/dicegame/dicegame.html
+++ b/dicegame/dicegame.html
@@ -14,7 +14,7 @@
     <div class="container-fluid row text-center mt-5">
         <div class="mainbox1 col-4">
             <div class="p1box1 text-light bg-dark rounded ">Player-1</div>
-            <div class="p1box2 p1score text-danger display-2 mt-5">Score  0 </div>
+            <div class="p1box2 p1score text-danger display-2 mt-5">Score 0 </div>
             <button class="btn btn-success p1box3 p1roolbtn mt-5">Rool</button>
         </div>
         <div class="mainbox2 col-4 ">
@@ -24,7 +24,7 @@
         </div>
         <div class="mainbox3 col-4">
             <div class="p2box1 text-light bg-dark rounded ">Player-2</div>
-            <div class="p2box2 p2score mt-5 display-2">Score  0</div>
+            <div class="p2box2 p2score mt-5 text-danger display-2">Score 0</div>
             <button class="btn btn-success p1box3 p2roolbtn mt-5">Rool</button>
         </div>
     </div>
@@ -41,4 +41,5 @@
         crossorigin="anonymous"></script>
 </body>
 <hr class="bg-dark">
+
 </html>
