adding edited title and roll spell

--- a/dicegame/dicegame.html
+++ b/dicegame/dicegame.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=\, initial-scale=1.0">
-    <title>Document</title>
+    <title>DICE GAME</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -15,7 +15,7 @@
         <div class="mainbox1 col-4">
             <div class="p1box1 text-light bg-dark rounded ">Player-1</div>
             <div class="p1box2 p1score text-danger display-2 mt-5">Score 0 </div>
-            <button class="btn btn-success p1box3 p1roolbtn mt-5">Rool</button>
+            <button class="btn btn-success p1box3 p1roolbtn mt-5">Roll</button>
         </div>
         <div class="mainbox2 col-4 ">
             <div class="c1box1 turnbox bg-danger text-light rounded mb-5"></div>
@@ -25,7 +25,7 @@
         <div class="mainbox3 col-4">
             <div class="p2box1 text-light bg-dark rounded ">Player-2</div>
             <div class="p2box2 p2score mt-5 text-danger display-2">Score 0</div>
-            <button class="btn btn-success p1box3 p2roolbtn mt-5">Rool</button>
+            <button class="btn btn-success p1box3 p2roolbtn mt-5">Roll</button>
         </div>
     </div>
 
